scrollbar fixes

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Cal+Sans&family=Poiret+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Cal+Sans&family=Poiret+One&display=swap");
 @import "tailwindcss";
 @import "tw-animate-css";
 
@@ -116,12 +116,33 @@
   --sidebar-ring: oklch(0.38 0.189 293.745);
 }
 
-
 @layer base {
   * {
     @apply border-border outline-ring/50;
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+@layer utilities {
+  ::-webkit-scrollbar {
+    width: 9px;
+    background: transparent;
+    z-index: 12;
+    overflow: visible;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    width: 9px;
+    background-color: var(--primary);
+    border-radius: 10px;
+    z-index: 12;
+    border: 3px solid var(--border);
+    background-clip: padding-box;
+    transition: background-color 0.32s ease-in-out;
+    margin: 4px;
+    min-height: 32px;
+    min-width: 32px;
   }
 }
